<resources>
    <string name="app_name">GUI programming</string>
    <string name="btn_recipe">Recipe Search Engine</string>
    <string name="btn_foreign">Foreign Currency Conversion</string>
    <string name="btn_news">News API headlines</string>

    <string name="double_sided_arrow"><![CDATA[<->]]></string>
    <string name="foreign_str_currency_list">Currency list</string>
    <string name="foreign_str_favourites">Favourites</string>
    <string name="foreign_str_base_currency">BASE CURRENCY</string>
    <string name="foreign_fav_foreign_currency">FOREIGN CURRENCY</string>
    <string name="foreign_str_filter">Filter</string>
    <string name="foreign_str_clear">Clear</string>
    <string name="foreign_str_hint_enter_filter">Enter currency symbol to filter…</string>
    <string name="foreign_str_convert">Convert</string>
    <string name="foreign_str_add_to_favourites">Add to favourites</string>
    <string name="foreign_str_remove_from_favourites">Remove from favourites</string>
    <string name="foreign_str_hint_enter_amount">Enter amount</string>
    <string name="foreign_str_from">From</string>
    <string name="foreign_str_to">To</string>
    <string name="foreign_str_toast_error_while">Error while getting symbols</string>
    <string name="foreign_str_spinner_item">Please select base currency</string>
    <string name="foreign_str_rates_error">Error while getting rates</string>
    <string name="foreign_str_removed_snack">Removed from favourites</string>
    <string name="foreign_str_fail_remove_snack">Failed to remove!</string>
    <string name="foreign_str_snack_add_fail">Failed to add!</string>
    <string name="foreign_str_snack_added">Added to favourites</string>
    <string name="foreign_str_how_to_use">How to use</string>
    <string name="foreign_str_help_1">Select base currency symbol first, and select the foreign currency symbol for conversion.</string>
    <string name="foreign_str_help_2">Enter text to filter currency</string>
    <string name="foreign_str_help_3">Press \'clear\' to clear filter</string>
    <string name="foreign_str_help_4">On the conversion screen, enter amount and press \'convert\' to get conversion</string>
    <string name="foreign_str_help_5">Press \'add to favourites\' to save conversion currency units offline, and To remove from favourites, press \'Remove from Favourites\' button.</string>
    <string name="help">Help</string>
    <string name="ok">Ok</string>
    <string name="wait">Please wait…</string>
    <string name="author">Author:</string>
    <string name="version_number">Version number:</string>

    <string name="news_search">Search</string>
    <string name="news_saved">Saved</string>
    <string name="news_view_in_browser">View in browser</string>
    <string name="news_save">Save</string>
    <string name="news_delete">Delete</string>
    <string name="news_error_toast">Please enter topic name to search…</string>
    <string name="news_wait">Please wait…</string>
    <string name="news_failed_save">Failed to save article!</string>
    <string name="news_success_save">Article saved!</string>
    <string name="news_success_delete">Article deleted!</string>
    <string name="news_failed_delete">Failed to delete article!</string>
    <string name="news_hint_search">Enter topic to get news…</string>
    <string name="news_help_how_to_use">How to use</string>
    <string name="news_help_ok">OK</string>
    <string name="news_author">Author</string>
    <string name="news_version">Version</string>
    <string name="news_help_first">On Search screen, enter topic and press \'Search\' to get news article headlines.</string>
    <string name="news_help_second">Click on news headlines to read short description.</string>
    <string name="news_help_three">On the description screen, click on \'Save\' to save article offline. And click on \'Delete\' to delete saved article. Click on \'View in browser\' to read full article online.</string>
    <string name="news_help_four">Click on \'Saved\' to view saved articles.</string>


    <string name="recipe_toast_error">Please enter recipe title!</string>
    <string name="recipe_please_wait">Please wait!</string>
    <string name="recipe_hint">Enter recipe title</string>
    <string name="recipe_search">Search</string>
    <string name="recipe_favs">Favourites</string>
    <string name="recipe_snack_add_success">Recipe added to favourites!</string>
    <string name="recipe_snack_add_fail">Failed to add!</string>
    <string name="recipe_snack_rem_success">Recipe removed from favourites!</string>
    <string name="recipe_snack_rem_fail">Failed to remove!</string>
    <string name="recipe_publisher">Publisher:</string>
    <string name="recipe_author">Author</string>
    <string name="recipe_version">Version number</string>
    <string name="recipe_ok">OK</string>
    <string name="recipe_how_to_use">How to use</string>
    <string name="recipe_visit_source_link">Visit Source link</string>
    <string name="recipe_visit_publisher_link">Visit publisher link</string>
    <string name="recipe_save_to_favourites">Save to Favourites</string>
    <string name="recipe_remove_from_favourites">Remove from favourites</string>
    <string name="recipe_social_rank">Social Rank:</string>
    <string name="recipe_help">Help</string>
    <string name="recipe_help_one">On the search screen, enter recipe title to search. The list of search result will be shown.</string>
    <string name="recipe_help_two">Tap on list item to view details.</string>
    <string name="recipe_help_three">On the details screen, Click on Save to Favourites to save recipe detail offline.</string>
    <string name="recipe_help_four">To view list of saved recipes, click on Favourites button to view a list of saved recipes.</string>
</resources>
