<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/foreign_str_base_currency"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="19sp"/>

    <Spinner
        android:id="@+id/spinnerBaseCurrency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/foreign_fav_foreign_currency"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="19sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/editTextFilter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/foreign_str_hint_enter_filter"/>
        <Button
            android:id="@+id/buttonFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foreign_str_filter"/>
        <Button
            android:id="@+id/buttonClearFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foreign_str_clear"/>
    </LinearLayout>

    <ListView
        android:id="@+id/listForeignSymbols"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>