<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnRecipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_recipe" />

    <Button
        android:id="@+id/btnForeignCurrency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_foreign" />

    <Button
        android:id="@+id/btnNewsAPI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_news" />
</LinearLayout>