<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/editTextForFavFilter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:hint="@string/foreign_str_hint_enter_filter"
            android:singleLine="true"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/buttonForFragFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foreign_str_filter"/>
        <Button
            android:id="@+id/buttonForFragClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foreign_str_clear"/>
    </LinearLayout>

    <ListView
        android:id="@+id/listViewFavouriteList"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>